Add Index, Update, Delete CQRS pattern realization
