# storage/api-docs/api-docs.json
@@ -56,12 +56,6 @@
                                 }
                             }
                         }
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "404": {
-                        "description": "Not Found"
                     }
                 },
                 "security": [
@@ -317,12 +311,321 @@
                 "responses": {
                     "204": {
                         "description": "User deleted"
-                    },
-                    "404": {
-                        "description": "User not found"
-                    },
-                    "401": {
-                        "description": "Unauthorized for delete"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v2/user": {
+            "get": {
+                "tags": [
+                    "UsersCQRS"
+                ],
+                "summary": "Users list",
+                "description": "Get list of users CQRS",
+                "operationId": "getListOfUsersCQRS",
+                "responses": {
+                    "200": {
+                        "description": "Get list of users.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "users": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "properties": {
+                                                            "id": {
+                                                                "type": "integer"
+                                                            },
+                                                            "name": {
+                                                                "type": "string"
+                                                            },
+                                                            "surname": {
+                                                                "type": "string"
+                                                            },
+                                                            "email": {
+                                                                "type": "string"
+                                                            },
+                                                            "path": {
+                                                                "type": "string"
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    }
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "UsersCQRS"
+                ],
+                "summary": "Add user",
+                "description": "Add user",
+                "operationId": "cdba9bb1d60f3a456388b1d4dcb3e122",
+                "requestBody": {
+                    "description": "Provide All Info Below",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "email",
+                                    "password",
+                                    "name",
+                                    "surname"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "email",
+                                        "format": "text",
+                                        "example": "mercedes68@example.org"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "123456789"
+                                    },
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Anna"
+                                    },
+                                    "surname": {
+                                        "type": "string",
+                                        "example": "Fox"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "user": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "type": "integer",
+                                                            "example": 70
+                                                        },
+                                                        "name": {
+                                                            "type": "string",
+                                                            "example": "Anna"
+                                                        },
+                                                        "email": {
+                                                            "type": "string",
+                                                            "example": "anna@gmail.com"
+                                                        },
+                                                        "surname": {
+                                                            "type": "string",
+                                                            "example": "Rutkowska"
+                                                        },
+                                                        "updated_at": {
+                                                            "type": "string",
+                                                            "format": "date-time"
+                                                        },
+                                                        "created_at": {
+                                                            "type": "string",
+                                                            "format": "date-time"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v2/user/{id}": {
+            "put": {
+                "tags": [
+                    "UsersCQRS"
+                ],
+                "summary": "Update user",
+                "description": "Update user",
+                "operationId": "4eaf56a24c28b5585f6a6a48385956f2",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "User id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Provide All Info Below",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "password"
+                                ],
+                                "properties": {
+                                    "id": {
+                                        "type": "integer",
+                                        "example": 70
+                                    },
+                                    "email": {
+                                        "type": "email",
+                                        "format": "text",
+                                        "example": "mercedes68@example.org"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "123456789"
+                                    },
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Anna"
+                                    },
+                                    "surname": {
+                                        "type": "string",
+                                        "example": "Fox"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Updated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "user": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "type": "integer",
+                                                            "example": 70
+                                                        },
+                                                        "name": {
+                                                            "type": "string",
+                                                            "example": "Anna"
+                                                        },
+                                                        "email": {
+                                                            "type": "string",
+                                                            "example": "anna@gmail.com"
+                                                        },
+                                                        "surname": {
+                                                            "type": "string",
+                                                            "example": "Rutkowska"
+                                                        },
+                                                        "updated_at": {
+                                                            "type": "string",
+                                                            "format": "date-time"
+                                                        },
+                                                        "created_at": {
+                                                            "type": "string",
+                                                            "format": "date-time"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "UsersCQRS"
+                ],
+                "summary": "Delete user",
+                "description": "Delete user",
+                "operationId": "eae789f704df0d8ac0c764c23b900209",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "User id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "User deleted"
                     }
                 },
                 "security": [
@@ -374,11 +677,14 @@
     },
     "components": {
         "responses": {
+            "401": {
+                "description": "Unauthorized"
+            },
+            "404": {
+                "description": "Not Found"
+            },
             "400": {
                 "description": "Bad request"
-            },
-            "401": {
-                "description": "Authorization information is missing or invalid"
             },
             "403": {
                 "description": "Forbidden"
@@ -406,6 +712,10 @@
         {
             "name": "Users",
             "description": "Users endpoints"
+        },
+        {
+            "name": "UsersCQRS",
+            "description": "Users endpoints (CSRF pattern)"
         }
     ]
 }
